--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prisma": "^6.7.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "recharts": "^3.7.0"
+    "recharts": "^3.7.0",
+    "resend": "^6.9.2"
   },
   "devDependencies": {
     "@types/node": "^20",
